--- a/sway/.config/waybar/style.css
+++ b/sway/.config/waybar/style.css
@@ -27,11 +27,27 @@
 }
 
 #waybar {
-    background: #323232;
+    background: rgba(26,26,26,0.4);
     color: white;
     font-family: InconsolataLGC Nerd Font Mono Medium;
     font-size: 13px;
 }
+
+#window {
+    font-weight: bold;
+    border-bottom: 2px solid rgba(255,255,255,0.8);
+    border-radius: 1px;
+    padding-top: 2px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+window#waybar.empty #window,
+window#waybar.solo #window {
+    border-color: transparent;
+    color: transparent;
+}
+
 
 #battery,
 #clock,
@@ -40,8 +56,12 @@
 #network,
 #idle_inhibitor,
 #pulseaudio {
-    padding-left: 8px;
-    padding-right: 8px;
+    border-bottom: 2px solid rgba(255,255,255,0.8);
+    border-radius: 1px;
+    padding-top: 2px;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-left: 3px;
 }
 
 #battery {
@@ -78,13 +98,10 @@
     color: orange;
 }
 
-#window {
-    font-weight: bold;
-}
-
 #workspaces button {
-    border-top: 2px solid transparent;
-    padding-bottom: 2px;
+    background: rgba(26,26,26,0.4);
+    border-bottom: 2px solid rgba(100,100,100,0.8);
+    padding-top: 2px;
     padding-left: 10px;
     padding-right: 10px;
     color: #888888;
